--- a/src/index.html
+++ b/src/index.html
@@ -168,6 +168,7 @@
               <input
                 class="form__input form__input_job"
                 id="job"
+                name="job"
                 value="Marketing"
                 required
                 minlength="2"
