--- a/src/index.html
+++ b/src/index.html
@@ -166,34 +166,31 @@
           </form>
         </article>
       </div>
-        </div>
-        <button class="button button_type_success order__button" id="order__button">
-          Finalizar
-        </button>
-      </aside>
-    </main>
-    <div class="popup popup_edit_profile">
-      <article class="popup__container popup__container_product">
-        <header class="popup__header">
-          <h1 class="popup__title">Editar Perfil</h1>
-          <button class="popup__close-button">X</button>
-        </header>
-        <form class="form">
-          <div class="form__control">
-            <label class="form__label" for="name">Nome:</label>
-            <input class="form__input" name="name" id="name" />
-          </div>
-          <div class="form__control">
-            <label class="form__label" for="about">Sobre:</label>
-            <input class="form__input" id="about" />
-          </div>
-          <button name="button_submit" class="button button_type_success">
-            Salvar
-          </button>
-        </form>
-      </article>
-    </div>
-  </div>
+      <div class="popup popup_add_product">
+        <article class="popup__container popup__container_product">
+          <header class="popup__header">
+            <h1 class="popup__title">Novo Produto</h1>
+            <button class="popup__close-button">X</button>
+          </header>
+          <form class="form">
+            <div class="form__control">
+              <label class="form__label" for="image">Imagem:</label>
+              <input class="form__input" id="image" />
+            </div>
+            <div class="form__control">
+              <label class="form__label" for="productName">Nome:</label>
+              <input class="form__input" name="name" id="productName" />
+            </div>
+            <div class="form__control">
+              <label class="form__label" for="price">Preço:</label>
+              <input class="form__input" id="price" />
+            </div>
+            <button name="button_submit" class="button button_type_success">
+              Salvar
+            </button>
+          </form>
+        </article>
+      </div>
     </div>
 
     <div class="alert_container"></div>
