--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,7 @@
     />
     <link rel="stylesheet" href="./pages/reset.css" />
     <link rel="stylesheet" href="./pages/index.css" />
-    <script src="./scripts/validate.js" defer></script>
-    <script src="./scripts/index.js" defer></script>
+    <script type="module" src="./scripts/index.js" defer></script>
     <title>Tripleten PDV</title>
   </head>
 
@@ -206,6 +205,11 @@
             </button>
           </form>
         </article>
+      </div>
+      <div class="popup popup_image">
+        <button class="popup__close-button">X</button>
+        <img src="" alt="" class="popup__image" />
+        <p class="popup__image-text"></p>
       </div>
     </div>
 
